Fixed the nav bar spacing in character select screen

--- a/ClientApp/src/style/6-pages/_characters.scss
+++ b/ClientApp/src/style/6-pages/_characters.scss
@@ -13,7 +13,7 @@
   justify-content: center;
 
   header {
-    margin: 24px;
+    margin-bottom: 24px;
     padding: 16px;
     background-color: black;
     width: 100vw;
